# dless_tech

./: .gitignore  README.md
gpu_codes/laneD/working_case/src/test/: CMakeLists.txt
gpu_codes/particleF/multiparticle_cmake/src/: CMakeLists.txt  particlefilter.cpp  robot_class.h
gpu_codes/particleF/multiparticle_plotting/: main.cpp  niks_README.txt  robot.h  run.cpp
gpu_codes/particleF/multiparticle_plotting/report_plots/: main.cpp  robot_after_measure_1_ch4.py  robot_only_ch3.py  robot_with_particles_ch3.py
gpu_codes/particleF/particle_opencl/: CMakeLists.txt
gpu_codes/particleF/particle_opencl/src/: CMakeLists.txt  main.cpp  robot.cpp
gpu_codes/particleF/rng_particle_opencl/src/: clll.h  particleplot.py  pfkernel.cl
gpu_codes/particleF_laneD/1_particleF_laneD/src/: particleplot.py  robot.h
gpu_codes/particleF_laneD/2_opencl_particleF_laneD/src/: createLineKernel.cl  goodLineWeightKernel.cl  main.cpp  robot.h
gpu_codes/particleF_laneD/2_opencl_particleF_laneD/src/test/: extractGoodLineKernel_NOTWORKING
gpu_codes/particleF_laneD/3_rng+2/src/: goodLineWeightKernel.cl  main.cpp  particleplot.py
gpu_codes/video_opencl_particleF_laneD/1_volp/src/: CMakeLists.txt  robot.h
gpu_codes/video_opencl_particleF_laneD/1_volp/src/test/: CMakeLists.txt
gpu_codes/video_opencl_particleF_laneD/1_volp/src/test/vel_volp/: goodLineWeightKernel.cl  main.cpp  particleplot.py
gpu_codes/video_opencl_particleF_laneD/4_volp/src/: goodLineWeightKernel.cl  kernel_header.h  main.cpp  main_ori
gpu_codes/video_opencl_particleF_laneD/5_volp/src/: clll.h  goodLineWeightKernel.cl  robot.h
gpu_codes/video_opencl_particleF_laneD/6_volp_test/src/: createLineKernel.cl  goodLineWeightKernel.cl
gpu_codes/video_opencl_particleF_laneD/7_volp_local_mem/src/: goodLineWeightKernel.cl  goodLineWeightKernel_GrID  goodLineWeightKernel_ORI  kernel_header.h  main_times
gpu_codes/video_opencl_particleF_laneD/8_volp_motion_model/src/: goodLineWeightKernel.cl  main.cpp
opencl_gpu_codes/laneD/working_case/src/: CMakeLists.txt  main.cpp
opencl_gpu_codes/particleF/multiparticle_cmake/: CMakeLists.txt
opencl_gpu_codes/particleF/multiparticle_plotting/: robot.cpp
opencl_gpu_codes/particleF/multiparticle_plotting/report_plots/: particles_weight_ch4.py  robot_after_measure_ch4.py
opencl_gpu_codes/particleF/particle_opencl/src/: clll.cpp  movekernel.cl  pfkernel.cl  robot.h
opencl_gpu_codes/particleF/rng_particle_opencl/src/: CMakeLists.txt  RNG.cl  main.cpp  movekernel.cl  rng_own.h
opencl_gpu_codes/particleF_laneD/1_particleF_laneD/src/: main.cpp  robot.cpp
opencl_gpu_codes/particleF_laneD/2_opencl_particleF_laneD/src/: CMakeLists.txt  particleplot.py
opencl_gpu_codes/particleF_laneD/3_rng+2/src/: CMakeLists.txt  createLineKernel.cl  kernel_header.h  robot.h
opencl_gpu_codes/video_opencl_particleF_laneD/1_volp/: CMakeLists.txt
opencl_gpu_codes/video_opencl_particleF_laneD/1_volp/src/: createLineKernel.cl  goodLineWeightKernel.cl  main.cpp
opencl_gpu_codes/video_opencl_particleF_laneD/1_volp/src/test/vel_volp/: CMakeLists.txt  RNG_mwc.cl  createLineKernel.cl  robot.cpp  robot.h
opencl_gpu_codes/video_opencl_particleF_laneD/2_volp/src/: goodLineWeightKernel.cl  main.cpp  particleplot.py
opencl_gpu_codes/video_opencl_particleF_laneD/3_volp/src/: CMakeLists.txt
opencl_gpu_codes/video_opencl_particleF_laneD/4_volp/src/: createLineKernel.cl  robot.h
opencl_gpu_codes/video_opencl_particleF_laneD/5_volp/src/: createLineKernel.cl  main.cpp
opencl_gpu_codes/video_opencl_particleF_laneD/6_volp_test/src/: main.cpp  robot.h
opencl_gpu_codes/video_opencl_particleF_laneD/7_volp_local_mem/src/: clll.cpp  createLineKernel.cl  goodLineWeightKernel_LOCALINE  main.cpp
opencl_gpu_codes/video_opencl_particleF_laneD/8_volp_motion_model/src/: robot.h
(+49 files in other folders)
